@@ -2,6 +2,8 @@ lintian-brush (0.65) UNRELEASED; urgency=medium
 
   * Explicitly set vendor when running tests; fixes tests running on
     Ubuntu. Closes: #960832
+  * Don't just strip whitespace from license paragraphs in copyright-
+    refers-to-symlink-license.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 17 May 2020 14:06:16 +0000
 
